# SpecForge-Agent

./: .env.example  .gitignore  CONTEXT_MANAGER_INTEGRATION_PROPOSAL.md  CONTEXT_MANAGER_TOKEN_CONFIGURATION.md  LICENSE  README.md  perf_analysis.py  pyproject.toml  test_context_integration.py  test_suite_validation_report.json  test_tasks_agent_container.py
.github/instructions/: codebase-agent-guide.md.instructions.md
.github/workflows/: ci.yml
.kiro/steering/: git-tools-usage.md
artifacts/reports/: documentation_updates_summary.md  security_fix_api_keys.md  task_7_3_cleanup_summary.md
autogen_framework/: README.md  agent_manager.py  codebase_analysis_service.py  config_cli.py  config_manager.py  context_compressor.py  context_manager.py  context_utils.py  dependency_container.py  main.py  main_controller.py  memory_manager.py  quality_metrics.py  session_manager.py  shell_executor.py  token_manager.py  workflow_manager.py
autogen_framework/agents/: __init__.py  base_agent.py  design_agent.py  error_recovery.py  implement_agent.py  plan_agent.py  task_decomposer.py  tasks_agent.py
autogen_framework/docs/: FUTURE_IMPROVEMENTS.md  MERGE_CONFLICT_RESOLUTION_RECORD.md  (+6 more)
config/: MIGRATION.md  README.md  models.json
docs/: DOCUMENTATION_CLEANUP_SUMMARY.md  IMPLEMENT_AGENT_PERFORMANCE_OPTIMIZATION_DESIGN.md  OPTIMIZATION_PSEUDO_CODE.md  PERFORMANCE_OPTIMIZATION_EXECUTIVE_SUMMARY.md  README.md  configuration-best-practices.md  configuration-guide.md  configuration-quick-reference.md  configuration-system-overview.md  dependency-injection-guide.md  maincontroller-workflowmanager-refactor.md  migration-guide.md
tests/: DEPENDENCY_CONTAINER_FIXTURES.md  MOCK_SETUP_GUIDE.md  README.md  README_CONTEXT_MANAGER_TESTS.md  TESTING_STANDARDS_SUMMARY.md  TEST_PATTERNS.md  conftest.py
(+154 files in other folders)
